// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IngredientItem component renders an ingredient by default 1`] = `
<Fragment>
  <h2 />
  <div
    className="utensils"
  >
    🍋
  </div>
  <button
    className="remove basicButton"
    onClick={[Function]}
    type="button"
  >
    REMOVE
  </button>
</Fragment>
`;

exports[`IngredientItem component renders an ingredient given props 1`] = `
<Fragment>
  <h2>
    test-class-name
  </h2>
  <div
    className="utensils"
  >
    🍋
  </div>
  <button
    className="remove basicButton"
    onClick={[Function]}
    type="button"
  >
    REMOVE
  </button>
</Fragment>
`;
